fixed scrollbar in chrome and fixed image paths

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -19,6 +19,11 @@
     height: $measure * 15;
     padding: $measure * 2;
     overflow: scroll;
+    overflow-x: hidden;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     &--head {
       display: flex;
